--- a/funstyles.css
+++ b/funstyles.css
@@ -26,6 +26,7 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
     align-items: flex-start;
     margin-top: 100px;
+    margin-bottom: 5rem;
 }
 
 .grid-item {
