--- a/style.css
+++ b/style.css
@@ -1,14 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500;700&display=swap');
 
 
 .para{
     display: flex;
     justify-content: center;
-    font-size: 80;
+    font-size: 100;
     font-weight: bolder;
-    color: lightgreen;
+    color: yellow;
     margin-top: 5%;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
+    font-family: "Rubik", sans-serif;
+    letter-spacing: 0.3rem;
+}
+
+.para:hover{
+  color: red;
+  cursor: pointer;
 }
 
 nav{
@@ -24,7 +32,13 @@ label.logo{
     line-height: 80px;
     padding: 0 100px;
     font-weight: bold;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
+    font-family: "Poppins"; sans-serif;
+    letter-spacing: 0.2rem;
+}
+
+label.logo:hover{
+  color: yellow;
 }
 
 nav ul{
@@ -44,13 +58,16 @@ nav ul li a{
     padding: 10px 15px;
     border-radius: 30px;
     text-transform: uppercase;
-    font-family: Jetbrains Mono;
+    /* font-family: Jetbrains Mono; */
+    font-family: "Rubik", sans-serif;
+    text-decoration: none;
 }
 
 a.active, a:hover{
     transition: 0.5s;
     /* background: #1b9bff; */
-    background: purple;
+    background: lightgreen;
+    color: black;
 }
 
 .card-btn{
@@ -72,7 +89,7 @@ a.active, a:hover{
     text-decoration: none;
     font-family: "Poppins", sans-serif;
     width: 30%;
-    margin-bottom: 2rem;
+    margin-bottom: 3.5rem;
     margin-left: 15rem;
 }
 
@@ -88,4 +105,10 @@ a.active, a:hover{
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     align-items: flex-start;
     margin-top: 100px;
+}
+
+.home-img{
+    margin-right: 5rem;
+    width: 600;
+    height: 350;
 }
